--- a/runtime/hadron/Cargo.toml
+++ b/runtime/hadron/Cargo.toml
@@ -71,8 +71,8 @@ pallet-staking-rpc-runtime-api = { default-features = false, git = "https://gith
 # lyra configs
 lyra-common = { git = "https://github.com/hercules-network/lyra.git", default-features = false }
 pallet-names = { git = "https://github.com/hercules-network/lyra.git", default-features = false }
-pallet-nft-multi = { git = "https://github.com/hercules-network/lyra.git", default-features = false }
-pallet-nft-blindbox = { git = "https://github.com/hercules-network/lyra.git", default-features = false }
+pallet-nfr-multi = { git = "https://github.com/hercules-network/lyra.git", default-features = false }
+pallet-nfr-blindbox = { git = "https://github.com/hercules-network/lyra.git", default-features = false }
 pallet-rewards = { git = "https://github.com/hercules-network/lyra.git", default-features = false }
 pallet-staking = { git = "https://github.com/hercules-network/lyra.git", default-features = false }
 pallet-validator-set = { git = "https://github.com/hercules-network/lyra.git", default-features = false }
@@ -129,8 +129,8 @@ std = [
     "pallet-contracts-rpc-runtime-api/std",
     "lyra-common/std",
     "pallet-names/std",
-    "pallet-nft-multi/std",
-    "pallet-nft-blindbox/std",
+    "pallet-nfr-multi/std",
+    "pallet-nfr-blindbox/std",
     "pallet-validator-set/std",
     "pallet-staking/std",
     "pallet-rewards/std",
